--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
   <a routerLink="about"  routerLinkActive="active">About</a>
   </li>
   <li>
-    <a routerLink="contact" routerLinkActive="active" >Contact</a>
+    <a routerLink="contact" routerLinkActive="active" >Contac</a>
   </li>
   <li>
     <a routerLink="parent" routerLinkActive="active" >Parent</a>
